// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App/> renders correctly if contains children 1`] = `
<div
  className="AppStyled-jBxgUA iVjDIN"
>
  <div
    className="TopRegionStyled-cVQlko gRcViP"
  >
    <div
      className="TopRegionContentStyled-iFwSwY ewMYrE"
    />
  </div>
  <div
    className="MainRegionStyled-gqcCET ePyrOs"
  >
    <div
      className="ContentStyled-dbeIsI gAKDxp"
    >
      <div>
        TEST
      </div>
    </div>
  </div>
  <div
    className="BottomRegionStyled-djrNnR efysWV"
  >
    <div
      className="BottomRegionContentStyled-eNFvSp igfcXw"
    />
  </div>
</div>
`;

exports[`<App/> renders correctly if prop fixed changing 1`] = `
<div
  className="AppStyled-jBxgUA iVjDIN"
>
  <div
    className="MainRegionStyled-gqcCET ePyrOs"
  >
    <div
      className="ContentStyled-dbeIsI gAKDxp"
    >
      <div>
        TEST
      </div>
    </div>
  </div>
</div>
`;

exports[`<App/> renders correctly if prop fixed changing 2`] = `
<div
  className="AppStyled-jBxgUA iVjDIN"
>
  <div
    className="MainRegionStyled-gqcCET diTFYw"
  >
    <div
      className="ContentStyled-dbeIsI gdEPoZ"
    >
      <div>
        TEST
      </div>
    </div>
  </div>
</div>
`;

exports[`<App/> renders correctly if prop fixed set false 1`] = `
<div
  className="AppStyled-jBxgUA iVjDIN"
/>
`;

exports[`<App/> renders correctly if prop fixed set true 1`] = `
<div
  className="AppStyled-jBxgUA kzApsw"
/>
`;

exports[`<App/> renders correctly with default props 1`] = `
<AppStyled
  fixed={false}
/>
`;
